@@ -9,6 +9,7 @@ v0.6.1 (??.01.2010)
  * Update for TYPO3 4.3. New usage for tx_rnbase::makeInstance(). This methode can be used to instanciate object with parameters for constructor. Also backward compatible with lower versions of TYPO3.
  * Deprecated function calls removed
  * BaseFilter: new static methods for handlePageBrowser() and handleCharBrowser()
+ * Link: Support Parameters for other extensions. Use "qualifier::param" as key.
 
 v0.6.0 (30.12.2009)
  * SearchBase: CUSTOM orderby clause is possible
